Fixed #2203 - Suite P theme not wrapping text in Accounts Billing and Shipping details

--- a/themes/SuiteP/css/editview.scss
+++ b/themes/SuiteP/css/editview.scss
@@ -606,7 +606,6 @@ slot {
   text-align: left;
   min-height: 48px;
   vertical-align: baseline;
-  white-space: nowrap;
 }
 
 .detail-view-field a {
